fixed spacing

--- a/editprofile.css
+++ b/editprofile.css
@@ -32,15 +32,24 @@ input.form{
 
 div.details{
 	width: 50%;
+	
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 div.password{
 	width: 50%;
+
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .name{
 	display: flex;
 	flex-direction: row;
+	gap: 10px;
 }
 
 .title{
